--- a/src/styling/scss/pages/_project.scss
+++ b/src/styling/scss/pages/_project.scss
@@ -38,7 +38,8 @@
       font-family: customFont, sans-serif;
       background-color: $CNavyBlue;
       cursor: pointer;
-      width: 300px;
+      width: 50%;
+      max-width: 300px;
       color: $CBlueGreen;
       border: 3px solid $CBlueGreen;
       box-shadow: 0 0 20px black;
