--- a/src/styling/stylesheet/main.css
+++ b/src/styling/stylesheet/main.css
@@ -6,6 +6,9 @@
   justify-content: space-around;
   align-items: center;
 }
+.header .header-title {
+  font-size: 1.5rem;
+}
 .header .header-title .title-subtext {
   text-align: center;
   font-size: 0.75rem;
@@ -26,6 +29,7 @@
   color: #75e6da;
 }
 .header .header-nav {
+  position: relative;
   display: flex;
 }
 .header .header-nav .nav-list {
@@ -57,6 +61,11 @@
   height: 0;
 }
 
+@media (min-width: 768px) {
+  .header .header-title {
+    font-size: 2rem;
+  }
+}
 @media screen and (max-width: 768px) {
   .header .header-nav {
     position: relative;
@@ -96,13 +105,13 @@
   .header .header-nav .burger-list {
     position: absolute;
     box-shadow: 0 0 20px black;
-    top: 5px;
-    left: -9em;
+    top: 15%;
+    right: 80%;
     visibility: visible;
     display: inline;
     list-style-type: none;
     background-color: #1e1e1e;
-    width: 7em;
+    width: 11em;
     height: -moz-fit-content;
     height: fit-content;
     padding: 0.5em 1em;
@@ -334,7 +343,8 @@
   font-family: customFont, sans-serif;
   background-color: #1e1e1e;
   cursor: pointer;
-  width: 300px;
+  width: 50%;
+  max-width: 300px;
   color: #75e6da;
   border: 3px solid #75e6da;
   box-shadow: 0 0 20px black;
